[gd_scene load_steps=4 format=3 uid="uid://1l211qhhg1fe"]

[ext_resource type="Script" path="res://scenes/levels/level.gd" id="1_8k674"]
[ext_resource type="PackedScene" uid="uid://duvb5djr0iwwp" path="res://scenes/player/player.tscn" id="3_cg8o8"]
[ext_resource type="PackedScene" uid="uid://dbogdtpyg60jm" path="res://scenes/UI/ui.tscn" id="3_ov1el"]

[node name="ParentScene" type="Node2D"]
script = ExtResource("1_8k674")

[node name="Ground" type="Node2D" parent="."]

[node name="Items" type="Node2D" parent="."]

[node name="Projectiles" type="Node" parent="."]

[node name="UI" parent="." instance=ExtResource("3_ov1el")]

[node name="Player" parent="." instance=ExtResource("3_cg8o8")]

[connection signal="grenade_signal" from="Player" to="." method="_on_player_grenade_signal"]
[connection signal="laser_signal" from="Player" to="." method="_on_player_laser_signal"]
